--- a/survey.yml
+++ b/survey.yml
@@ -5,5 +5,5 @@
   tasks:
     - name: Install {{ pkg_name }}
       ansible.builtin.package:
-        name: "{{ package_name }}"
+        name: "{{ pkg_name }}"
         state: present
